# C_Home

./: .gitignore  MoreInfo.txt  გეგმა.docx
WorkSpaces/: CMakeLists.txt  c++_workspace.code-workspace
WorkSpaces/1.Getting_Started/Challange#1/: main.cpp
WorkSpaces/1.Getting_Started/CompilerWarnings/: main.cpp
WorkSpaces/1.Getting_Started/Project2/: main
WorkSpaces/1.Getting_Started/logicErrors/: main  main.cpp
WorkSpaces/10.OOP/: Account.cpp  Account.h  mainRepeate.cpp
WorkSpaces/10.OOP/AccessingClassMembers/: accessingClassMembers.cpp
WorkSpaces/10.OOP/AccessingModifiers/: accessingModifiers.cpp
WorkSpaces/10.OOP/Challenge/: challenge.cpp  movie.cpp  movie.h  movies.cpp  movies.h
WorkSpaces/10.OOP/ConstInClasses/: constInClasses.cpp
WorkSpaces/10.OOP/ConstructorInitializationLists/: constructorInitializationLists.cpp
WorkSpaces/10.OOP/ConstructorsAndDestructors/: constructorsAndDestructors.cpp
WorkSpaces/10.OOP/CopyConstructor/: copyConstructor.cpp
WorkSpaces/10.OOP/DeclareClassAndObjects/: declareClassAndObjects.cpp
WorkSpaces/10.OOP/DeepCopy/: deepCopy.cpp
WorkSpaces/10.OOP/DefaultConstructor/: defaultConstructor.cpp
WorkSpaces/10.OOP/DefaultConstructorParameters/: defaultConstructorParameters.cpp
WorkSpaces/10.OOP/DelegatingConstructors/: delegatingConstructors.cpp
WorkSpaces/10.OOP/FriendOfClass/: friendOfClass.cpp
WorkSpaces/7.Characters_And_Strings/: mainRepeat.cpp
WorkSpaces/8.Functions/: mainRepeat.cpp
WorkSpaces/9.Pointers_And_References/: mainRepeate.cpp
WorkSpaces/buildConfig/: forConfigTest  forConfigTest.cpp
(+203 files in other folders)
