cmake_minimum_required(VERSION 3.22)
project(WorkSpaces)

set(CMAKE_CXX_STANDARD 17)

add_executable(workspaces 11.Operator_Overloading/insertionAndExtractionOperators/main.cpp 11.Operator_Overloading/insertionAndExtractionOperators/Mystring.cpp 11.Operator_Overloading/insertionAndExtractionOperators/Mystring.h)